--- a/Factory/Views/Engineers/Edit.cshtml
+++ b/Factory/Views/Engineers/Edit.cshtml
@@ -4,19 +4,22 @@
 
 @model Factory.Models.Engineer
 
-<h4>Edit Engineer: @Html.DisplayFor(model => model.EngineerName)</h4>
+  <h4>Edit this engineer: @Html.DisplayFor(model => model.EngineerName)</h4>
 
-@using (Html.BeginForm())
-{
-  @Html.HiddenFor(model => model.EngineerId)
+  <p>@Html.ValidationMessageFor(model => model.EngineerName, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p>
 
-  @Html.LabelFor(model => model.EngineerName)
-  @Html.EditorFor(model => model.EngineerName)
+  <p>@Html.ValidationMessageFor(model => model.EngineerLicense, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p>
 
-  @Html.LabelFor(model => model.EngineerLicense)
-  @Html.EditorFor(model => model.EngineerLicense)
+  <p>@Html.ValidationMessageFor(model => model.EngineerSpecialty, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p>
 
-  <input type="submit" value="Save" />
-}
+  @using (Html.BeginForm())
+  {
+    @Html.HiddenFor(model => model.EngineerId)
+    <p>Name: @Html.EditorFor(model => model.EngineerName)</p>
+    <p>License:  @Html.EditorFor(model => model.EngineerLicense)</p>
+    <p>Specialty: @Html.EditorFor(model => model.EngineerSpecialty)</p>
+      
+    <input type="submit" value="Save" />
+  }
 
-<p>@Html.ActionLink("Back to list", "Index")</p>
+  <p>@Html.ActionLink("Back to list", "Index")</p>
