--- a/Factory/Views/Machines/Delete.cshtml
+++ b/Factory/Views/Machines/Delete.cshtml
@@ -4,4 +4,11 @@
 
 @model Factory.Models.Machine
 
-@* *@
+  <h2>You Sure About That?</h2>
+
+  @Html.DisplayNameFor(model => model.MachineName): @Html.DisplayFor(model => model.MachineName)
+  @using (Html.BeginForm())
+  {
+    <input type="submit" value="Delete" />
+  }
+  @Html.ActionLink("Back to List", "Index")
