--- a/Factory/Views/Engineers/AddMachine.cshtml
+++ b/Factory/Views/Engineers/AddMachine.cshtml
@@ -16,4 +16,4 @@ Layout = "_Layout";
 <input type="submit", value="Add"/>
 }
 
-<p>@Html.ActionLink("Back to List", "Index")
+<p>@Html.ActionLink("Back to List", "Index")</p>
