--- a/Factory/Views/Machines/Details.cshtml
+++ b/Factory/Views/Machines/Details.cshtml
@@ -4,6 +4,34 @@
 
 @model Factory.Models.Machine;
 @using Factory.Models;
-@using System.Collections.Generic;
 
-@* *@
+  <h2>Machine Details</h2>
+  <hr />
+  <h3>@Html.DisplayNameFor(model => model.MachineName): @Html.DisplayFor(model => model.MachineName)</h3>
+  <h3>@Html.DisplayNameFor(model => model.MachineNumber): @Html.DisplayFor(model => model.MachineNumber)</h3>
+
+  @if (Model.JoinEntities.Count == 0)
+  {
+    <p>Assign an engineers!</p>
+  }
+  else
+  {
+    <h4>Engineers assigned to this machine:</h4>
+    <ul>
+    @foreach (EngineerMachine join in Model.JoinEntities)
+    {
+      <li>@join.Engineer.EngineerName</li>
+      @using (Html.BeginForm("DeleteJoin", "Machines"))
+      {
+        @Html.Hidden("joinId", @join.EngineerMachineId)
+        <input type="submit" value="Remove engineer from this machine" />
+      }
+    }
+    </ul>
+  }
+
+  <p>@Html.ActionLink("Back to machines", "Index")</p>
+  <p>@Html.ActionLink("Assign an engineer to this machine", "AddEngineer", new { id = Model.MachineId })</p>
+  <p>@Html.ActionLink("Edit machine", "Edit", new { id = Model.MachineId })</p>
+  <p>@Html.ActionLink("Delete machine", "Delete", new { id = Model.MachineId })</p>
+  <p>@Html.ActionLink("Add new engineer", "Create", "Engineers")</p>
