--- a/Factory/Views/Machines/Index.cshtml
+++ b/Factory/Views/Machines/Index.cshtml
@@ -4,4 +4,20 @@
 
 @using Factory.Models;
 
-@* *@
+  <h1>Machines</h1>
+
+  @if (@Model.Count == 0)
+  {
+    <h3>Add A Machine!</h3>
+  } 
+
+  <ul>
+    @foreach(Machine machine in Model)
+    {
+      <li>@Html.ActionLink($"{machine.MachineName}", "Details", new { id = machine.MachineId })</li>
+    }
+  </ul>
+
+  <p>@Html.ActionLink("Add new machine", "Create")</p>
+  <p>@Html.ActionLink("Add new engineer", "Create", "Engineers")</p>
+  <p>@Html.ActionLink("Home", "Index", "Home")</p>
