--- a/Factory/Views/Shared/_Layout.cshtml
+++ b/Factory/Views/Shared/_Layout.cshtml
@@ -13,8 +13,7 @@
   </head>
   <body>
     <header class="bg-primary py-3">
-    
-      <div class="container">
+      <div class="container text-center">
         <h1 class="text-white">Dr. Sillystringz</h1>
         <nav>
           <ul class="list-inline">
@@ -25,8 +24,8 @@
         </nav>
       </div>
     </header>
-
-    @RenderBody()
-
+    <div class="container text-center">
+      @RenderBody()
+    </div>
   </body>
 </html>
